--- a/package.json
+++ b/package.json
@@ -2,26 +2,49 @@
   "name": "code-review-app",
   "version": "0.1.0",
   "private": true,
+  "engines": {
+    "node": ">=20.11.1"
+  },
   "scripts": {
-    "dev": "next dev --turbopack",
+    "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "test": "jest",
+    "test:watch": "jest --watch"
   },
   "dependencies": {
+    "@llamaindex/anthropic": "^0.2.3",
+    "@llamaindex/core": "^0.5.5",
+    "@llamaindex/env": "^0.1.28",
+    "@testing-library/jest-dom": "^6.6.3",
+    "@testing-library/react": "^16.2.0",
+    "@types/jest": "^29.5.14",
+    "diff": "^7.0.0",
+    "diff-parse": "^0.0.13",
+    "dotenv": "^16.4.7",
+    "jest": "^29.7.0",
+    "llamaindex": "^0.9.6",
+    "next": "15.2.1",
+    "next-env": "^1.1.1",
+    "openai": "^4.86.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "next": "15.2.1"
+    "react-markdown": "^10.0.1",
+    "rehype-raw": "^7.0.0",
+    "rehype-sanitize": "^6.0.0",
+    "remark-gfm": "^4.0.1"
   },
   "devDependencies": {
-    "typescript": "^5",
+    "@eslint/eslintrc": "^3",
+    "@tailwindcss/postcss": "^4",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
-    "@tailwindcss/postcss": "^4",
-    "tailwindcss": "^4",
     "eslint": "^9",
     "eslint-config-next": "15.2.1",
-    "@eslint/eslintrc": "^3"
+    "jest-environment-jsdom": "^29.7.0",
+    "tailwindcss": "^4",
+    "typescript": "^5"
   }
 }
